added files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-**/*.npy
-**/*.cppipe
-**/*.pyc
-**/*.html
-**/*.csv
-**/*.cpproj
-**/*.pth
-**/*.json
+*.npy
+*.cppipe
+*.pyc
+*.html
+*.csv
+*.cpproj
+*.pth
+*.json
+*.png
+*.eps
+*.log
